fixed upload spacing

--- a/client/css/upload.css
+++ b/client/css/upload.css
@@ -109,7 +109,7 @@ header {
      border-style: groove;
      border-width: 1vh;
      border-color: black;
-     margin-left: 28vh;
+     margin-left: 31.5vh;
      margin-top: 6vh;
 
      /* Aarons code that I stole :) */
@@ -124,9 +124,10 @@ header {
  }
 
  .support{
+     margin-top: 3vh;
      font-size:2vh;
      color: gray;
-     margin-left: 30vh;
+     margin-left: 29vh;
  }
 
  .description{
